Fix truncated CSS file

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ Theme Name: The Evolution
 Author: Matheus Misumoto
 Author URI: https://matheusmisumoto.dev/
 Description: The Evolution is a minimalistic multi-purpose block theme. From single page website to complex navigations, it's a great theme to publish stories, tutorials, documentations, etc.
-Version: 1.0.3
+Version: 1.0.4
 Requires at least: 6.0
 Tested up to: 6.0
 Requires PHP: 7.4
@@ -63,8 +63,7 @@ footer h3 { font-size: 1.1875rem; padding: 0; margin: 0; text-transform: upperca
 footer ul { margin: 0; padding: 0; list-style: none; gap: 1.2rem; }
 footer ul > li { padding: .5em; color: var(--secondary-text); line-height: 1em; vertical-align: middle; }
 footer ul > li svg { height: 1.25em; width: 2em; padding: 0; margin: 0; fill: var(--text); }
-et; }
-m; color: var(--secondary-text); line-height: 1.5em; align-self: center; gap: 1.2rem; }
+footer .textFooter > ul { flex: 1; flex-grow: 10; font-size: 0.9em; color: var(--secondary-text); line-height: 1.5em; align-self: center; gap: 1.2rem; }
 
 /* POSTS AND STATIC PAGES */
 .title, main div:first-of-type > ul { padding: clamp(0.001rem, 4vw, 3rem) 0; }
@@ -113,8 +112,8 @@ form input[type=file] { width: 100%; font-size: 1em; }
 form input[type=checkbox], form input[type=radio] { font-size: 1.25em; }
 span[class*="embed-"] { position: relative; padding-top: 28.125%; padding-bottom: 28.125%; height: 0; overflow: hidden; margin: 0; }
 span[class*="embed-"] iframe, span[class*="embed-"] object, span[class*="embed-"] embed { position: absolute; top:0; left: 0; width: 100%; height: 100%; margin: 0; }
-form input[type=submit], #respond input[type=submit], #nf-field-10 { background-color: #0071e3; color: #FFF; -webkit-appearance: none; }
-form input[type=reset], form input[type=button] { background-color: var(--page-bg); color: var(--secondary-text); -webkit-appearance: none; }
+form input[type=submit], #respond input[type=submit], #nf-field-10 { background-color: #0071e3; color: #FFF; appearance: none; }
+form input[type=reset], form input[type=button] { background-color: var(--page-bg); color: var(--secondary-text); appearance: none; }
 input[type="checkbox"] ~ label { display: inline; vertical-align: super; }
 
 /* COMMENTS */
